<resources>
    <string name="app_name">Tour Guide</string>
    <string name="culture">CULTURE</string>
    <string name="food">FOOD</string>
    <string name="tourguideoakland">Tour Guide for Oakland</string>
    <string name="kids">KIDS</string>
    <string name="outdoors">OUTDOORS</string>
    <string name="omca">1000 Oak St, Oakland, CA 94607</string>
    <string name="omca_name">Oakland Museum of California</string>
    <string name="aam">African American Museum</string>
    <string name="aam_location">659 14th St, Oakland, CA 94612</string>
    <string name="pardee">Pardee Home Museum</string>
    <string name="pardee_location">672 11th St, Oakland, CA 94607</string>
    <string name="star">The Star Pizza</string>
    <string name="star_location">3425 Grand Ave, Oakland, CA 94610</string>
    <string name="spices">Spices 3 Chinese</string>
    <string name="spices_location">369 12th St, Oakland, CA 94607</string>
    <string name="chalet">Lake Chalet Seafood</string>
    <string name="chalet_location">1520 Lakeside Dr, Oakland, CA 94612</string>
    <string name="fairyland">Childrens Fairyland</string>
    <string name="fairyland_location">699 Bellevue Ave, Oakland, CA 94610</string>
    <string name="farm">West Oakland Farm Park</string>
    <string name="farm_location">2847 Peralta St, Oakland, CA 94608</string>
    <string name="pump">Pump It Up Play</string>
    <string name="pump_location">2500 Embarcadero, Oakland, CA 94606</string>
    <string name="redwood">Redwood Regional Park</string>
    <string name="redwood_location">7867 Redwood Rd, Oakland, CA 94619</string>
    <string name="merritt">Lake Merritt Gardens</string>
    <string name="merritt_location">666 Bellevue, Oakland, CA 94606</string>
    <string name="harbor">Middle Harbor Park</string>
    <string name="harbor_location">2777 Middle Harbor Rd, Oakland, CA 94607</string>
</resources>
